2003-10-28  Igor Pechtchanski  <pechtcha@cs.nyu.edu>

	* path.cc (dot_special_chars): New global variable.
	(special_name): Make files ending in "." special.
	(fnunmunge): Allow encoded ".".
	(mount_item::fnmunge): Handle trailing ".".

2003-10-28  Christopher Faylor  <cgf@redhat.com>

	* include/stdint.h: Duplicate below effort for rest of *64_*.

2003-10-28  Christopher Faylor  <cgf@redhat.com>

	* include/stdint.h: Correctly define INT64_MAX.

2003-10-27  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.h (fast_mutex::init): Initialize lock_counter.

2003-10-27  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (OBSOLETE_FUNCTION):  Add tmpfile.
	(NEW_FUNCTIONS): Add _tmpfile64 -> tmpfile translation.
	* cygwin.din: Export _tmpfile64
	* include/cygwin/version.h: Bump api minor number.

2003-10-27  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Add sem_close, sem_getvalue, sem_open and sem_timedwait.
	* pthread.cc (+mangle_sem_name): New function.
	(sem_open): Ditto.
	(sem_close: Ditto.
	(sem_timedwait): Ditto.
	(sem_getvalue): Ditto.
	* thread.cc (semaphore::semaphore): Rearrange member initialization.
	Use appropriate security attribute for process shared semaphores.
	(semaphore::semaphore): New constructor for named semaphores.
	(semaphore::~semaphore): Care for semaphore name.
	(semaphore::_post): Accomodate failing ReleaseSemaphore. Use value
	returned by ReleaseSemaphore vor currentvalue.
	(semaphore::_getvalue): New method.
	(semaphore::_timedwait): Ditto.
	(semaphore::_fixup_after_fork): Rearrange. Don't fail for process
	shared semaphores.
	(semaphore::open): New method.
	(semaphore::timedwait): Ditto.
	(semaphore::post): Fix return value.  Set errno appropriately.
	(semaphore::getvalue): New method.
	* thread.h (class semaphore): Add prototypes for open, getvalue,
	timedwait, _getvalue, _timedwait.  Add prototypes for new constructor.
	Add name member.
	* include/semaphore.h: Add prototypes for sem_open, sem_close,