@@ -1,3 +1,8 @@
+2003-10-29  Danny Smith  <dannysmith@users.sourceforege.net>
+
+	* include/stdint.h: Prevent signed->unsigned conversion for 32 and
+	64 bit min value constants.
+
 2003-10-28  Igor Pechtchanski  <pechtcha@cs.nyu.edu>
 
 	* path.cc (dot_special_chars): New global variable.
